syntax = "proto3";

package service_auth;

option go_package = "service_auth/pb";

message AuthRegisterRequest {
    string username = 1;
    string email = 2;
    string password = 3;
    string cpf = 4;
    string credit_card = 5;
}

message AuthRegisterResponse {
    string message = 1;
}

