syntax = "proto3";

package service_auth;

import "rpc_user_register.proto";

option go_package = "service_auth/pb";

service AuthService {
    rpc RegisterUser(AuthRegisterRequest) returns (AuthRegisterResponse) {}
}